# CUDA-Accelerated-IK-Solver-for-a-6-DOF-Manipulator

./: .gitignore  README.md
cuda_ik_solver/: CMakeLists.txt  package.xml
cuda_ik_solver/include/cuda_ik_solver/: ik_solver.hpp
cuda_ik_solver/src/: ik_node.cpp  ik_solver.cu
